src/static/styles/new.css
/* ... */
.toggle.i .cross .y {
    margin-top: -4px;
    height: 16px;
}

.cross {
    position: absolute;
    left: 50%;
    top: 50%;
}

.cross .x, .cross .y {
    border-radius: 2px;
    background-clip: padding-box;
    background-color: #1d1f27;
    height: 4px;
    width: 4px;
    margin: -2px;
    position: absolute;
    left: 0;
    top: 0;
}

.cross .x {
    margin-left: -12px;
    margin-top: -2px;
    width: 24px;
}

.cross .y {
    margin-top: -12px;
    height: 24px;
}

.cross {
    transform: rotateZ(45deg);
}

.cross, .x, .y {
    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.about .panel, .about .cables {
    transition: all 0.8s cubic-bezier(0.77, 0, 0.175, 1);
}

button:hover {
    background-color: #d92400;
    color: white;
}

.toggle:hover .x, .toggle:hover .y {
    background-color: white;
}

.links a:hover {
    background-color: #d92400;
    color: white;
}

#loaderswing {
    -webkit-perspective: 500px;
    -moz-perspective: 500px;
    -o-perspective: 500px;
    perspective: 500px;
    display: block;
    text-align: center;
    margin: auto;
    background: transparent;
    width: 22vw;
    height: auto;
    min-width: 150px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: auto;
    z-index: 0;
}

#loaderswing>img {
    position: relative;
    z-index: 1;
    width: 100%;
    display: block;
    color: #fff;
    text-decoration: none;
    text-align: center;
    font-size: 30px;
    top: 0px;
    z-index: 2;
    transform-origin: center top;
}

.loaderhoverslow {
    animation: swingslow 3s ease-in-out infinite;
}

@keyframes swingslow {
    0% {
        -webkit-transform: rotateX(-10deg);
        -moz-transform: rotateX(-10deg);
        -o-transform: rotateX(-10deg);
        -ms-transform: rotateX(-10deg);
        transform: rotateX(-10deg);
    }
    50% {
        -webkit-transform: rotateX(10deg);
        -moz-transform: rotateX(10deg);
        -o-transform: rotateX(10deg);
        -ms-transform: rotateX(10deg);
        transform: rotateX(10deg);
    }
    100% {
        -webkit-transform: rotateX(-10deg);
        -moz-transform: rotateX(-10deg);
        -o-transform: rotateX(-10deg);
        -ms-transform: rotateX(-10deg);
        transform: rotateX(-10deg);
    }
}

